--- a/arrivals.html
+++ b/arrivals.html
@@ -151,14 +151,14 @@ box-shadow: var(--box-shadow);
     <header>
         <h1>NEW ARRIVALS</h1>
         <ul class="navbar">
-            <li><a href="#Home">Book Now</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#Products">Products</a></li>
             </ul>
     </header>
      <section class="Home" id="Home">
     <div class="Home-text"> 
         <h2>NEW PRODUCTS ARE COMING ON:</h2>
-              <p id="demo"></p>
+              <p id="demo"><strong></strong></p>
               <br>
               <P>Welcome to LUSTRE & BLOOM HAVEN, <br> Your haven for beauty and relaxation. Our expert team is dedicated to providing even more and more luxurious products tailored to your unique style.
                 <br> Just Elevate Your Look Effortlessly
