--- a/arrivals.html
+++ b/arrivals.html
@@ -108,17 +108,24 @@ box-shadow: var(--box-shadow);
 }    
 .Home-text h2{
     font-size: 1.5rem;
-    color: var(--main-color);
+    color: #fb5d5d;
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: center;
       }
-      
-.Home-text p{
-    font-size: 1.5rem;
+      .Home-text h4{
+    font-size: 1.3rem;
     color: var(--background-color);
     margin: 0.5rem 0 1.4rem;
     text-align: center;
+      } 
+.Home-text p{
+    font-size: 2rem;
+    color: var(--background-color);
+    margin: 0.5rem 0 1.4rem;
+    text-align: left;
+    font-weight: bold;
+    font-style: italic;
 }
 .btn{
     font-size: 1.5rem;
@@ -158,11 +165,11 @@ box-shadow: var(--box-shadow);
      <section class="Home" id="Home">
     <div class="Home-text"> 
         <h2>NEW PRODUCTS ARE COMING ON:</h2>
-              <p id="demo"><strong></strong></p>
+              <p id="demo" style="color: #fa3ca1;"></p>
               <br>
-              <P>Welcome to LUSTRE & BLOOM HAVEN, <br> Your haven for beauty and relaxation. Our expert team is dedicated to providing even more and more luxurious products tailored to your unique style.
+              <h4>Welcome to LUSTRE & BLOOM HAVEN, <br> Your haven for beauty and relaxation. Our expert team is dedicated to providing even more and more luxurious products tailored to your unique style.
                 <br> Just Elevate Your Look Effortlessly
-              </P>
+              </h4>
                <br>
                                           <h2>BOOK YOURS NOW</h2> <br><br>
                                   <a href="#" class="btn">Book Now & Get 15% Discount</a>
