--- a/branches.html
+++ b/branches.html
@@ -99,17 +99,30 @@
     </section>
     <section class="find" id="find">
         <div class="Footer-map" style="text-align: center; margin-top: 20px;">
-                 <h2 style="color: #ea95c3; text-align: center; font-size: 2rem;">Our Location</h2><br>
+                 <h2 style="color: #ea95c3; text-align: center; font-size: 2rem;">Our 1st Branch</h2><br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d498.4322958251347!2d30.107912455394818!3d-1.9707622035985795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srw!4v1731937934911!5m2!1sen!2srw"
-            width="800" 
+            width="900" 
             height="450" 
             margin-top="20px"
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
-        </iframe>"
-        </div>
+        </iframe>
+        </div><br><br><br><br>
+
+        <div class="Footer-map" style="text-align: center; margin-top: 20px;">
+            <h2 style="color: #ea95c3; text-align: center; font-size: 2rem;">Our 2nd Branch</h2><br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1319.4386979944688!2d113.4379697190953!3d23.098478014761135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjPCsDA1JzU0LjMiTiAxMTPCsDI2JzIwLjgiRQ!5e0!3m2!1sen!2srw!4v1732579521227!5m2!1sen!2srw" 
+        width="900" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    </div>
+
     </section>
 
 </body>
